--- a/app/globals.css
+++ b/app/globals.css
@@ -349,3 +349,13 @@ border-radius: 15px;
   position: absolute;
   inset: 0;
   height: 100%;}
+  .abtstl .splide__slide.is-active {border: none !important;}
+  .abtstl .splide__slide.is-active p{color: #ffffff;}
+
+  .abtstl .splide__slide.is-active::after {content: '';position: absolute;
+    top: 0;
+    width: 16px;
+    height: 16px;
+    background: #5BA646;
+    border-radius: 100%;
+    left: 18%;}
