--- a/app/globals.css
+++ b/app/globals.css
@@ -412,3 +412,5 @@ height: 100%;background: linear-gradient(205.71deg, rgba(0, 0, 0, 0) 0%, #5BA646
   transform: rotate(330deg) translate(0, -130%);
   animation-delay: -0.1s;
 }
+.insts p{margin-bottom: 15px;}
+.insts li{list-style: disc;margin-bottom: 10px; margin-left: 19px; font-size: 19px; color: #1F1F1F;}
