--- a/app/globals.css
+++ b/app/globals.css
@@ -414,3 +414,8 @@ height: 100%;background: linear-gradient(205.71deg, rgba(0, 0, 0, 0) 0%, #5BA646
 }
 .insts p{margin-bottom: 15px;}
 .insts li{list-style: disc;margin-bottom: 10px; margin-left: 19px; font-size: 19px; color: #1F1F1F;}
+
+.ql-editor p{
+  font-family: 'Arial', sans-serif !important;
+  font-size: 16px !important;/* Optional for visible area */
+}
