--- a/app/globals.css
+++ b/app/globals.css
@@ -419,3 +419,8 @@ height: 100%;background: linear-gradient(205.71deg, rgba(0, 0, 0, 0) 0%, #5BA646
   font-family: 'Arial', sans-serif !important;
   font-size: 16px !important;/* Optional for visible area */
 }
+@media (min-width: 992px) and (max-width: 1199px) {
+  .wst57{
+    width: 57%;
+  }
+}
