--- a/app/globals.css
+++ b/app/globals.css
@@ -456,6 +456,14 @@ height: 100%;background: linear-gradient(205.71deg, rgba(0, 0, 0, 0) 0%, #5BA646
   outline: none !important;
   appearance: textfield !important;
 }
+.parsed-content ul{
+  list-style: disc;
+  margin-left: 20px;
+ padding-left: 1rem;
+}
+.parsed-content ul li{
+  font-size: clamp(1.0625rem, 1.5vw, 1.1875rem);
+}
 
 
 
